Project delete; docs updated
