# docs/openapi.yml
@@ -1027,3 +1027,53 @@ paths:
           description: Something was wrong in the body provided (Validation error)
         "500":
           description: Something failed out from your control (Database connection error, database query error or internal server error)
+
+  /project/delete/{id}:
+    delete:
+      tags:
+        - Project
+      summary: Delete a project (soft or hard)
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: ID of the project to delete
+        - name: soft
+          in: query
+          required: true
+          schema:
+            type: boolean
+          description: Perform a soft delete if true; otherwise, perform a hard delete.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                clientId:
+                  type: string
+                  example: "23"
+      responses:
+        "200":
+          description: Delete a project
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  acknowledge:
+                    type: boolean
+                    example: true
+        "401":
+          description: Token was not found or invalid (JWT error)
+        "404":
+          description: Project not found in database (ProjectNotFound error)
+        "422":
+          description: Something was wrong in the body or params provided (Validation error)
+        "500":
+          description: Something failed out from your control (Database connection error, database query error or internal server error)
